2010-12-21	The InnoDB Team

	* include/data0data.h, include/data0data.ic, include/row0upd.h,
	btr/btr0cur.c, row/row0purge.c, row/row0umod.c, row/row0upd.c,
	innodb.result, innodb.test:
	Fix Bug#58912 InnoDB unnecessarily avoids update-in-place
	on column prefix indexes

2010-12-09	The InnoDB Team

	* buf/buf0lru.c:
	Fix Bug#57600 output of I/O sum[%lu] can go negative

2010-11-11	The InnoDB Team

	* thr/thr0loc.c, trx/trx0i_s.c:
	Fix Bug#57802 Empty ASSERTION parameter passed to the HASH_SEARCH macro

2010-11-10	The InnoDB Team

	* dict/dict0dict.c, handler/handler0alter.cc, include/dict0dict.h
	row/row0merge.c:
	Fix Bug#55084 InnoDB crash and corruption after ALTER TABLE

2010-11-10	The InnoDB Team

	* srv/srv0start.c:
	Fix Bug#48026 Log start and end of InnoDB buffer pool
	initialization to the error log

2010-11-03	The InnoDB Team

	* include/btr0btr.h, include/btr0btr.ic, dict/dict0crea.c:
	Fix Bug#57947 InnoDB diagnostics shows btr_block_get calls
	instead of real callers

2010-11-03	The InnoDB Team

	* fil/fil0fil.c, fsp/fsp0fsp.c, handler/ha_innodb.cc,
	include/fil0fil.h, include/univ.i:
	Fix Bug #54538 - use of exclusive innodb dictionary lock limits
	performance.

2010-11-02	The InnoDB Team

	* btr/btr0cur.c, dict/dict0dict.c, dict/dict0load.c,
	handler/ha_innodb.cc, include/dict0dict.h, row/row0mysql.c,
	innodb_bug53046.result, innodb_bug53046.test:
	Fix Bug#53046 dict_update_statistics_low can still be run
	concurrently on same table

2010-11-02	The InnoDB Team

	* row/row0sel.c:
	Fix Bug#57799 READ UNCOMMITTED access failure of off-page
	DYNAMIC or COMPRESSED columns again

2010-10-24	The InnoDB Team

	* row/row0mysql.c
	Fix Bug#57700 Latching order violation in
	row_truncate_table_for_mysql()

2010-10-20	The InnoDB Team

	* dict/dict0load.c
	Fix Bug#57616 Sig 11 in dict_load_table() when failed to load
	index or foreign key

2010-10-19	The InnoDB Team

	* btr/btr0cur.c, buf/buf0buf.c, buf/buf0flu.c, handler/ha_innodb.cc,